# nix-templates

./: .gitignore  flake.nix
templates/basic-cpp23/: .clang-format  CMakeLists.txt  devshell.nix  flake.nix
templates/basic-cpp23/include/: hello-template.h
templates/basic-cpp23/nix/: derivation.nix  devshell.nix  metadata.nix  packages.nix
templates/basic-cpp23/src/: hello-template.cpp  main.cpp
